--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^2.24.79",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "countly-sdk-web": "20.4.0",
+    "gatsby": "2.24.84",
+    "react": "17.0.0",
+    "react-dom": "17.0.0"
   },
   "devDependencies": {
     "prettier": "2.1.2"
